# MyModifier

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: impl.rs  lib.rs
crates/macros/src/impl/: modifier.rs  modifier_callee.rs  modifier_caller.rs
crates/macros/tests/: modifier.rs  modifier_callee.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
